deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-app
  labels:
    app: remote-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: remote-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: remote-app
    spec:
      containers:
      - name: remote-app
        image: mohsindocker786/remotecompany:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: remote-app-service
#  annotations:
#   external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
#    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "55db8c92-be68-4388-ba86-c18339da5847"
#    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: remote-app
