deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: certificate-issuer
spec:
  tls:
  - hosts:
    - remoteapp.msawan.com
    - sub.remoteapp.msawan.com
    - mohsin.remoteapp.msawan.com    
    secretName: hello-kubernetes-tls
  rules:
  - host: "remoteapp.msawan.com"
  - host: "sub.remoteapp.msawan.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: remote-app-service
            port:
              number: 80
